--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,6 @@
 \usepackage{amsmath}
 \usepackage{url}
 \usepackage{booktabs}
-\def\mymathhyphen{{\hbox{-}}}
 \linenumbers
 \addtokomafont{disposition}{\rmfamily}
 \usepackage{appendix}
@@ -39,10 +38,10 @@
 The message of the public note based upon this document is as follows:
 
 \begin{itemize}
-  \item reconstructed tracks in the TPC can be matched to hits in an external cosmic ray counter (in our case the MuCS);
+  \item reconstructed tracks in a LArTPC can be matched to hits in an external cosmic ray counter (in our case the MuCS);
   \item the data reconstruction efficiency can be measured comparing the number of MuCS-triggered events with the number of MuCS reconstructed tracks;
-  \item there is a systematic error in the measurement of the data reconstructing efficiency due to the presence of detector non-uniformities;
   \item the multiple scattering of the cosmic rays introduces an irreducible impurity in our sample of MuCS reconstructed tracks.
+  \item there is a systematic error in the measurement of the data reconstructing efficiency due to the presence of detector non-uniformities;
   \item taking into account these systematic effects, the data reconstruction efficiency obtained with the MuCS is in agreement with a Monte Carlo reconstruction efficiency generated uniformly across the TPC.
 
 \end{itemize}
@@ -63,14 +62,14 @@ Using the \texttt{pan\-do\-ra\-Co\-smic} algorithm \cite{pandoracosmic} provided
 In the future, the method described in this paper will be adapted to use the data coming form the Cosmic Ray Tagger \cite{crt}, which is able to tag around 80\% of the cosmic rays hitting MicroBooNE LArTPC. In this way, we will be able to cover the entire $(\theta,\phi,L)$ parameter space and measure efficiency-corrected quantities, such as the cosmic-ray flux in the LArTPC.
 
 \section{The Muon Counter System}\label{sec:proc}
-The MuCS consists of two sets of planar modules made up of scintillator strips placed into two separate, light-tight boxes, readout via wavelength shifting fibers connected to Multi-Anode PMTs and placed on the top of the TPC. The Multi-Anode PMTs are readout by a DAQ system, separated from the DAQ system that reads out the TPC and PMT systems of the main detector.
+The MuCS consists of two sets of planar modules made up of scintillator strips placed into two separate, light-tight panels, readout via wavelength shifting fibers connected to Multi-Anode PMTs and placed on the top of the TPC. The Multi-Anode PMTs are readout by a DAQ system, separated from the DAQ system that reads out the TPC and PMT systems of the main detector.
 
 Each planar module is made up of two sets of 24 scintillator strips, 4 cm wide, arranged into bi-layers oriented perpendicular to each other. This configuration provides two coordinates ($z$ and $x$ in the MicroBooNE TPC coordinate system, shown in Fig. \ref{fig:coord}) of the crossing points of the cosmic rays. Combining these two coordinates with the height of the modules (corresponding to the $y$ coordinate in the MicroBooNE TPC coordinate system), it is possible to extrapolate the three-dimensional trajectory of the cosmic ray.
 
 The starting angle of the cosmic ray, in spherical coordinates, will be given by:
 \begin{align}
-  \theta_{\mathrm{MuCS}} = \mathrm{acos}\left(\frac{z_{\mathrm{top}}-z_{\mathrm{bottom}}}{r}\right) \\
-  \phi_{\mathrm{MuCS}} = \mathrm{atan}\left(\frac{y_{\mathrm{top}}-y_{\mathrm{bottom}}}{x_{\mathrm{top}}-x_{\mathrm{bottom}}}\right),
+  \theta = \mathrm{acos}\left(\frac{z_{\mathrm{top}}-z_{\mathrm{bottom}}}{r}\right) \\
+  \phi = \mathrm{atan}\left(\frac{y_{\mathrm{top}}-y_{\mathrm{bottom}}}{x_{\mathrm{top}}-x_{\mathrm{bottom}}}\right),
 \end{align}
 where $r = \sqrt{(x_{\mathrm{top}}-x_{\mathrm{bottom}})^2+(y_{\mathrm{top}}-y_{\mathrm{bottom}})^2+(z_{\mathrm{top}}-z_{\mathrm{bottom}})^2}$ and the top (bottom) coordinates are given by the hits in the top (bottom) MuCS panel.
 \begin{figure}[htbp]
@@ -81,9 +80,9 @@ where $r = \sqrt{(x_{\mathrm{top}}-x_{\mathrm{bottom}})^2+(y_{\mathrm{top}}-y_{\
   \end{center}
 \end{figure}
 
-This analysis has been performed on three merged dataset, acquired with different geometrical configurations. In each configuration, the two boxes have been placed at the upstream end, at the center and at the downstream end of the LArTPC, respectively.
+This analysis has been performed on three merged dataset, acquired with different geometrical configurations. In each configuration, the two panels have been placed at the upstream end, at the center and at the downstream end of the LArTPC, respectively.
 
-A three-dimensional schematics of the three MuCS setups is shown in Fig. \ref{fig:mucs} and the coordinates of the two boxes for each configuration are reported in Tab. \ref{tab:mucs}.
+A three-dimensional schematics of the three MuCS setups is shown in Fig. \ref{fig:mucs} and the coordinates of the two panels for each configuration are reported in Tab. \ref{tab:mucs}.
 \begin{figure}[htbp]
   \begin{subfigure}{0.30\textwidth}
     \includegraphics[width=\linewidth]{figures/upstream.png}
@@ -106,27 +105,27 @@ A three-dimensional schematics of the three MuCS setups is shown in Fig. \ref{fi
   \ra{1.2}
   \begin{tabular}{lcrrrccccc}
     \toprule
-    \textbf{Box} & \phantom{abc}& \multicolumn{2}{c}{x [cm]} & \phantom{abc} & \multicolumn{2}{c}{y [cm]} & \phantom{abc} & \multicolumn{2}{c}{z [cm]}\\
+    \textbf{Configuration} & \phantom{abc}& \multicolumn{2}{c}{x [cm]} & \phantom{abc} & \multicolumn{2}{c}{y [cm]} & \phantom{abc} & \multicolumn{2}{c}{z [cm]}\\
     \cmidrule{3-4} \cmidrule{6-7} \cmidrule{9-10}
     & & start & end & & start & end & & start & end\\
     \midrule
 
     \textbf{Upstream} & & & & & & & & & \\
-    Top box & & -75 & -27 & & 392 & 393 & & 224 & 272\\
-    Bottom box & & -27 & 21 & & 320 & 321 & & 224 & 272\\
+    Top panel & & -75 & -27 & & 392 & 393 & & 224 & 272\\
+    Bottom panel & & -27 & 21 & & 320 & 321 & & 224 & 272\\
 
     \midrule
     \textbf{Center} & & & & & & & & & \\
-    Top box & & -72 & -24 & & 397 & 398 & & 579 & 627\\
-    Bottom box & & -27 & 21 & & 320 & 321 & & 581 & 629\\
+    Top panel & & -72 & -24 & & 397 & 398 & & 579 & 627\\
+    Bottom panel & & -27 & 21 & & 320 & 321 & & 581 & 629\\
     \midrule
     \textbf{Downstream} & & & & & & & & & \\
-    Top box & & -75 & -27 & & 392 & 393 & & 971 & 1019\\
-    Bottom box & & -27 & 21 & & 320 & 321 & & 971 & 1019\\
+    Top panel & & -75 & -27 & & 392 & 393 & & 971 & 1019\\
+    Bottom panel & & -27 & 21 & & 320 & 321 & & 971 & 1019\\
     \bottomrule
 
   \end{tabular}
-  \caption{Coordinates of the top and bottom box of the MuCS detector for three geometrical setups.}\label{tab:mucs}
+  \caption{Coordinates of the top and bottom panel of the MuCS detector for three geometrical setups.}\label{tab:mucs}
 \end{table}
 
 
@@ -134,7 +133,7 @@ A three-dimensional schematics of the three MuCS setups is shown in Fig. \ref{fi
 The MuCS is designed to provide a trigger on through-going muons that intersect two planes of scintillator strips. The trigger is propagated to the MicroBooNE trigger system to record a full TPC and PMT readout. With the MuCS trigger in place, the $t_0$ for a track associated with the MuCS is known and these tracks are useful for various detector physics and reconstruction studies.
 
 The dataset used for this study has been collected with the DAQ configured in the trigger-readout mode: the MuCS trigger is sent to the TPC readout, while the MuCS DAQ saves the hit patterns seen in the scintillator strips.
-The MuCS triggers at a rate of nearly 3 Hz and this rate is prescaled by 100 before sending the signal to trigger readout. In the general data stream then, a MuCS trigger is issued at a rate of 0.02 Hz (lower than 0.03 Hz because the MuCS trigger is often vetoed by beam triggers), or roughly one per minute.
+The MuCS triggers at a rate of nearly 3 Hz and this rate is prescaled by 100 before sending the signal to trigger readout. In the general data stream, a MuCS trigger is issued at a rate of 0.02 Hz (lower than 0.03 Hz because the MuCS trigger is often vetoed by beam triggers), or roughly one per minute.
 Given a DAQ integration window of 100 ns, the accidental coincidental rate is negligible for our study. The probability that, during the same readout window (4.8 ms), another cosmic ray hits the MuCS is, given a trigger rate of 3 Hz, 0.01\% and it has also been considered negligible.
 
 The data then follows a processing path that merges the MuCS hit patterns and reconstructed trajectory information with the TPC and PMT data stream to form a MuCS-merged dataset. A flowchart of the procedure is shown in Fig. \ref{fig:scheme}.
@@ -144,31 +143,42 @@ The data then follows a processing path that merges the MuCS hit patterns and re
   \caption{Flowchart showing the procedure used to generate the dataset used in this analysis. We end up with two data products: one with extrapolated coordinates obtained using MuCS-only data and one with reconstructed data information.} \label{fig:scheme}
 \end{figure}
 
-The hits in the MuCS are used to obtain a bi-dimensional point in each panel and extrapolate a three-dimensional track (MuCS-extrapolated track). The TPC hits, instead, are fed to the reconstruction chain: then, the reconstructed track with the closest starting point (within a tolerance) to the MuCS-extrapolated track is stored in the dataset and it is tagged as a MuCS-reconstructed track. The PMT flash in time with the MuCS signal, if present, is also stored and associated to the MuCS-reconstructed track.  Fig. \ref{fig:evd} shows a diagram with the MuCS-reconstructed track, the MuCS-extrapolated track and the other reconstructed tracks in the same readout window.
+The hits in the MuCS are used to obtain a bi-dimensional point in each panel and extrapolate a three-dimensional track (MuCS-extrapolated track). The TPC hits, instead, are fed to the reconstruction chain: the reconstructed track with the closest starting point to the intersection of the MuCS-extrapolated track with the TPC is stored in the dataset and it is defined as a MuCS-tagged track. The distance $d$ between these two points is defined as:
+\begin{equation}\label{eq:d}
+d = \sqrt{(x_{\mathrm{MuCS}}-x_{\mathrm{reco}})^2+(y_{\mathrm{MuCS}}-y_{\mathrm{reco}})^2+(z_{\mathrm{MuCS}}-z_{\mathrm{reco}})^2},
+\end{equation}
+where $(x_{\mathrm{MuCS}},y_{\mathrm{MuCS}},z_{\mathrm{MuCS}})$ and $(x_{\mathrm{reco}},y_{\mathrm{reco}},z_{\mathrm{reco}})$ are the coordinates of the intersection of the MuCS-extrapolated track with the TPC and of the closest reconstructed track, respectively.
+
+The PMT flash in time with the MuCS signal, if present, is also stored and associated to the MuCS-tagged track.  Fig. \ref{fig:evd} shows a diagram with the MuCS-tagged track, the MuCS-extrapolated track and the other reconstructed tracks in the same readout window.
 \begin{figure}[htbp]
   \begin{center}
   \includegraphics[width=0.50\linewidth]{figures/evd.pdf}  \vspace{1.8em}\includegraphics[width=0.40\linewidth]{figures/evd_display.png}
 
-  \caption{Left: bi-dimensional view of a MuCS event. The black line shows the MuCS-extrapolated tracks, while the green line correspond to the MuCS-reconstructed track. Right: corresponding portion of the event display for the collection plane, showing the MuCS-reconstructed track. } \label{fig:evd}
+  \caption{Left: bi-dimensional view of a MuCS event. The black line shows the MuCS-extrapolated track, while the green line correspond to the MuCS-tagged track. Right: corresponding portion of the event display for the collection plane, showing the MuCS-tagged track. } \label{fig:evd}
 \end{center}
 \end{figure}
 Our dataset will then include two different sets of information, with a one-to-one correspondence:
 \begin{itemize}
-  \item MuCS-extrapolated information: using the two 2D points given by the MuCS (one for each box) we extrapolate a 3D line crossing the entire TPC. In this way we obtain two extrapolated starting angles ($\theta$ and $\phi$), an extrapolated track length $L$ and extrapolated start/end points, using only MuCS information.
-  \item Reconstructed TPC data information: for each event, we store the reconstructed spatial information of the MuCS-reconstructed track and of the in-time PMT flash, if present.
+  \item MuCS-extrapolated information: using the two 2D points given by the MuCS (one for each panel) we extrapolate a 3D line crossing the entire TPC. In this way we obtain two extrapolated starting angles ($\theta$ and $\phi$), an extrapolated track length $L$ and extrapolated start/end points, using only MuCS information.
+  \item Reconstructed TPC data information: for each event, we store the reconstructed spatial information of the MuCS-tagged track and of the in-time PMT flash, if present.
 \end{itemize}
 
 
-As Monte Carlo sample we used a complete cosmic-ray simulation, as described in \cite{cosmic}. The cosmic rays have ben generated using CORSIKA \cite{corsika},  propagated using GEANT4 \cite{geant}, and then passed through the detector simulation stage. The detector simulation attempts to simulate the detector response as precisely as possible, meaning that the current state of the detector is reflected, including known missing wires. Other known effects, such as the space charge effect \cite{sce}, are not currently modeled in the simulation.
+As Monte Carlo sample we used a complete cosmic-ray simulation, as described in \cite{cosmic}. The cosmic rays have ben generated using CORSIKA \cite{corsika},  propagated with GEANT4 \cite{geant}, and then passed through the detector simulation stage. The spherical angles $\theta$ and $\phi$ are measured using the starting point and direction of the generated cosmic ray, while the expected track length $L$ is measured extrapolating a three-dimensional line through the TPC.
+The distance $d$ is defined in this case as:
+\begin{equation}\label{eq:d_mc}
+d = \sqrt{(x_{\mathrm{sim}}-x_{\mathrm{reco}})^2+(y_{\mathrm{sim}}-y_{\mathrm{reco}})^2+(z_{\mathrm{sim}}-z_{\mathrm{reco}})^2},
+\end{equation}
+where $(x_{\mathrm{sim}},y_{\mathrm{sim}},z_{\mathrm{sim}})$ and $(x_{\mathrm{reco}},y_{\mathrm{reco}},z_{\mathrm{reco}})$ are the coordinates of the intersection of the simulated cosmic-ray trajectory with the TPC and of the closest reconstructed track, respectively.
+
+The detector simulation attempts to simulate the detector response as precisely as possible, meaning that the current state of the detector is reflected, including known missing wires. Other known effects, such as the space charge effect \cite{sce}, are not currently modeled in the simulation.
 
 From this complete Monte Carlo simulation, then, we selected only the cosmic rays with a starting angle $(\theta,\phi)$ within the geometrical acceptance of the MuCS.
 
-Our aim is to show that the reconstruction efficiency of simulated cosmic rays, generated all over the TPC, can be successfully compared to the data reconstruction efficiency, obtained placing a small muon counter system in three different places.
+Our aim is to show that the reconstruction efficiency of simulated cosmic rays, generated all over the TPC, can be successfully compared to the data reconstruction efficiency, obtained placing a small muon counter system in three different places. For the
 
-\section{MuCS-triggered cosmic rays angular distributions}\label{sec:flux}
-Before measuring the reconstruction efficiency we performed a survey of the position of the MuCS panels in each configuration. Taking the starting point and starting direction of the MuCS-reconstructed tracks it is possible to extrapolate their trajectory up to the height of the boxes and check if they went through both panels. However, the build-up of positive argon ions in the TPC causes a distortion in the electric field and consequently in the reconstruction of the tracks. Thus, before measuring the starting angles and extrapolating the paths, the starting position and direction of the reconstructed tracks in the TPC have been corrected with the data-driven procedure described in \cite{sce}.
-
-The two-dimensional plots of the extrapolated positions are reported in Fig. \ref{fig:alignment}. As we can see, some tracks are extrapolated outside the panels, because of multiple Coulomb scattering, but the majority of the points are well within the panels' borders.
+\section{MuCS-triggered cosmic-rays angular distributions}\label{sec:flux}
+Before measuring the reconstruction efficiency we performed a survey of the position of the MuCS panels in each configuration. Taking the starting point and starting direction of the MuCS-tagged tracks it is possible to extrapolate their trajectory up to the height of the panels and check if they went through their borders. However, the build-up of positive argon ions in the TPC causes a distortion in the electric field and consequently in the reconstruction of the tracks. Thus, before measuring the starting angles and extrapolating the paths, the starting position and direction of the reconstructed tracks in the TPC have been corrected with the data-driven procedure described in \cite{sce}.
 
 \begin{figure}[htbp]
   \begin{subfigure}{0.32\textwidth}
@@ -184,10 +194,14 @@ The two-dimensional plots of the extrapolated positions are reported in Fig. \re
     \caption{Downstream} \label{fig:downstream_align}
   \end{subfigure}
 
-  \caption{Monte Carlo simulation of the possible MuCS trajectories the three different MuCS setups used in this analysis. Brown tracks correspond to cosmic rays hitting both panels and the TPC, while red tracks go through the MuCS but miss the TPC.} \label{fig:alignment}
+  \caption{Extrapolated points of the MuCS-tagged tracks at the height of top and bottom panels for the upstream, center, and downstream configuration.} \label{fig:alignment}
 \end{figure}
 
-The angular distribution of the MuCS-triggering cosmic rays, obtained extrapolating a line from the MuCS hits, has also been measured and compared with an independent Monte Carlo simulation, used only to check that the angular distribution of the cosmic rays was the same.  In this case, the Monte Carlo samples have been obtained generating a sample of cosmic rays within the top box borders. Each event is stored only if the cosmic ray crosses also the bottom box. This Monte Carlo information must not be confused with the reconstructed Monte Carlo information described above, which is obtained reconstructing a simulated cosmic ray in the TPC. Fig. \ref{fig:mucs_angles} shows that the distributions of the spherical angles have a good data/Monte Carlo agreement.
+
+The two-dimensional plots of the extrapolated positions are reported in Fig. \ref{fig:alignment}. As we can see, some tracks are extrapolated outside the panels, because of multiple Coulomb scattering, but the majority of the points are well within the panels' borders.
+
+
+The angular distribution of the MuCS-triggering cosmic rays, obtained extrapolating a three-dimensional line from the MuCS hits, has also been measured and compared with an independent Monte Carlo simulation, used only to check that the angular distribution of the cosmic rays was the same.  In this case, the Monte Carlo samples have been obtained generating a sample of cosmic rays within the top panel borders. Each event is stored only if the cosmic ray crosses also the bottom panel. This Monte Carlo information must not be confused with the reconstructed Monte Carlo information described in Sec. \ref{sec:merging}, which is obtained reconstructing a simulated cosmic-ray event in the TPC. Fig. \ref{fig:mucs_angles} shows that the distributions of the spherical angles have a good data/Monte Carlo agreement.
 
 \begin{figure}[htbp]
   \begin{subfigure}{0.52\textwidth}
@@ -205,29 +219,43 @@ The angular distribution of the MuCS-triggering cosmic rays, obtained extrapolat
 
 
 \section{Reconstruction efficiencies}\label{sec:reco}
-We define the data reconstruction efficiency $\epsilon$ as the ratio between the number events with a MuCS-reconstructed track and the number of MuCS-triggered events:
+
+We define the MuCS reconstruction efficiency $\epsilon$ as the ratio between the number of events with a MuCS-tagged track closer than a maximum distance $d_{\mathrm{max}}$ to the MuCS-extrapolated starting point and the number of MuCS-triggered events:
 \begin{equation}
-  \epsilon = \frac{\mathrm{N.~of~MuCS-reconstructed~events}}{\mathrm{N.~of~MuCS-triggered~events}}.
+  \epsilon = \frac{\mathrm{N.~of~MuCS-tagged~events~within~}d_{max}}{\mathrm{N.~of~MuCS~events}}.
 \end{equation}
 
-However, the number of events with a MuCS-reconstructed track depends on the cut on the minimum distance between the MuCS-extrapolated track and the closest reconstructed track. Choosing a value too large, in fact, would overestimate our reconstruction efficiency. In this way, we would select events that do not have a reconstructed MuCS cosmic ray, but they happen to have another cosmic ray whose starting point is close to the extrapolated MuCS track.
+The reconstruction efficiency $\epsilon$ will then depend on the chosen value of $d_{\mathrm{max}}$. If $d_{\mathrm{max}}$ was too large, we would overestimate our real reconstruction efficiency, since we would select events that do not have a reconstructed MuCS cosmic-ray, but they happen to have another cosmic ray whose starting point is closer than $d_{\mathrm{max}}$ to the MuCS-extrapolated track.
 
-On the other hand, with a tolerance too small we would underestimate the data reconstruction efficiency, since we would not count the events with a MuCS cosmic ray scattered more than the tolerance.
+On the other hand, with a value of $d_{\mathrm{max}}$ too small we would underestimate the  reconstruction efficiency, since we would not count events with a MuCS cosmic-ray scattered more than $d_{\mathrm{max}}$.
 
-In order to choose the optimal value of the tolerance, we generated a MuCS Monte Carlo simulation for each geometrical configuration. Each Monte Carlo event will have a cosmic ray going through both MuCS panels, overlaid with a standard cosmic-ray event. The Monte Carlo dataset allows us to have a one-to-one association between a reconstructed track and a generated cosmic ray. It is then possible to measure the ideal reconstruction efficiency by comparing the number of MuCS cosmic rays with the number of events with a reconstructed MuCS cosmic ray. This value will not depend on the minimum distance and can be used as a reference: the optimal value of the tolerance is obtained when the measured reconstruction efficiency reaches the ideal reconstruction efficiency.
+In order to choose the optimal value of $d_{\mathrm{max}}$, we generated a MuCS Monte Carlo simulation for each geometrical configuration. Each Monte Carlo event will have a cosmic ray going through both MuCS panels (a MuCS cosmic-ray), overlaid with a standard cosmic-ray event. The Monte Carlo dataset allows us to have a one-to-one association between a reconstructed track and a generated cosmic ray. It is then possible to measure the true reconstruction efficiency $\epsilon_{\mathrm{true}}$ by comparing the number of simulated MuCS events with the number of events with a reconstructed MuCS cosmic-rays:
+\begin{equation}
+  \epsilon_{\mathrm{true}} = \frac{\mathrm{N.~of~MuCS~cosmic-rays}}{\mathrm{N.~of~MuCS~events}}.
+\end{equation}
 
-The purity of our sample will be defined as the ratio between the number of events with a real MuCS-reconstructed track within tolerance and the number of events with a reconstructed track within tolerance.
-
-Fig. \ref{fig:purity} shows the purity and the reconstruction efficiency as a function of the tolerance. Their product (the ratio between real reconstructed MuCS tracks and MuCS-triggered events) will reach the ideal reconstruction efficiency at infinite and it is also shown. As we can see from the plot, the optimal value for the tolerance in our case is 32 cm, that corresponds to a purity of 98.9\%.
+This value will not depend on $d_{\mathrm{max}}$ and can be used as a reference: the optimal value of $d_{\mathrm{max}}$ is obtained when the measured reconstruction efficiency $\epsilon_{\mathrm{data}}$ reaches the ideal reconstruction efficiency.
 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=0.7\linewidth]{figures/tolerance.pdf}
-    \caption{Purity (blue), efficiency (red) and their product (green) as a function of the tolerance. The dashed line shows the ideal reconstruction efficiency.} \label{fig:purity}
+    \caption{Purity $p$ (blue), efficiency $\epsilon$ (red) and their product (green) as a function of the tolerance. The dashed line shows the true reconstruction efficiency $\epsilon_{\mathrm{true}}$.} \label{fig:purity}
   \end{center}
 \end{figure}
 
-Once we fixed the value of the minimum distance between a MuCS-extrapolated track and a reconstructed track, we can express the reconstruction efficiency as a function of the spherical starting angles $\theta$, $\phi$ and the expected track length in the TPC $L$, obtained from the MuCS hits. In an ideal TPC, in fact, the reconstruction efficiency for a MIP depends only on the number of wires hit, which is given univocally by the direction and the length of the track in the TPC.
+
+The purity $p$ of our sample, measured with the same MuCS Monte Carlo sample, will be defined as the ratio between the number of events with a reconstructed MuCS cosmic-ray closer than $d_{\mathrm{max}}$ and the number of events with a reconstructed cosmic-ray closer than $d_{\mathrm{max}}$:
+\begin{equation}
+  p=\frac{\mathrm{N.~of~MuCS~cosmic-rays~within~}d_{\mathrm{max}}}{\mathrm{N.~of~MuCS-tagged~events~within~}d_{\mathrm{max}}}.
+\end{equation}
+
+
+
+Fig. \ref{fig:purity} shows the purity $p$ and the reconstruction efficiency $\epsilon$ as a function of the maximum distance $d_{\mathrm{max}}$. Their product (the ratio between MuCS-cosmic rays within $d_{\mathrm{max}}$ and MuCS events) will reach the true reconstruction efficiency $\epsilon_{\mathrm{true}}$ at infinite and it is also shown. As we can see from the plot, the optimal value for the tolerance in our case is 32 cm, that corresponds to a purity of 98.9\%.
+
+Once we fixed the value of the minimum distance between a MuCS-extrapolated track and a reconstructed track, we can measure the data and the Monte Carlo reconstruction efficiencies and express them as a function of the spherical starting angles $\theta$, $\phi$ and of the expected track length in the TPC $L$. In an ideal TPC, in fact, the reconstruction efficiency for a cosmic ray depends only on the number of wires hit, which is given univocally by the direction and the length of the track in the TPC.
+
+
 
 Our efficiency can then be plotted as a three-dimensional histogram: each bin will correspond to a particular combination of the $\theta$, $\phi$, $L$ variables. Fig. \ref{fig:3d} shows both the data and the Monte Carlo reconstruction efficiency, generated as described in Sec. \ref{sec:merging}.
 
@@ -240,13 +268,13 @@ Our efficiency can then be plotted as a three-dimensional histogram: each bin wi
     \includegraphics[width=\linewidth]{figures/3d_data.png}
     \caption{Data} \label{fig:3d_data}
   \end{subfigure}
-  \caption{Monte Carlo and data three-dimensional reconstruction efficiency as a function of the starting angles $\theta$, $\phi$ and the extrapolated track length $L$. A larger box correspond to a larger efficiency. The empty region in the upper part of the plot correspond to a region of the parameter space not covered by our dataset.}\label{fig:3d}
+  \caption{Monte Carlo and data three-dimensional reconstruction efficiency as a function of the starting angles $\theta$, $\phi$ and the extrapolated track length $L$. A larger panel correspond to a larger efficiency. The empty region in the upper part of the plot correspond to a region of the parameter space not covered by our dataset.}\label{fig:3d}
 \end{figure}
 
 \subsection{Detector non-uniformities}\label{sec:wires}
 The presence of detector non-uniformities can introduce a systematic error in the measurement of the reconstruction efficiency. In particular, the presence of missing wires in specific regions of the detector can lower the reconstruction efficiency in only one of our three dataset, since they cover different regions of the TPC.
 
-To check if these non-uniformities introduce a systematic effect we measured the significance $\sigma$ of the difference between the efficiency measured in two different configurations:
+To check if these non-uniformities introduce a systematic effect we measured the significance $\sigma$ of the difference between the data reconstruction efficiencies measured in two different configurations:
 \begin{equation}
 \sigma = \frac{\epsilon_a-\epsilon_b}{\sqrt{\Delta \epsilon_{a}^2 + \Delta \epsilon_b^2}},
 \end{equation}
@@ -281,7 +309,7 @@ In order to understand if these discrepancies are caused by missing wires in spe
   \caption{Reconstruction efficiency for each geometrical configuration with a difference significance larger than 3. The lowest value is reported in bold.}\label{tab:significance}
 \end{table}
 
-As we can see, the configuration with the lowest reconstruction efficiency in this cases is always the upstream one. The drawing of the extrapolated tracks with those specific $\theta,\phi,L$ coordinates shows that, for the upstream configuration, the corresponding cosmic rays go through regions with missing wires in one of the induction planes (Fig. \ref{fig:wires}). Moreover, since their $\theta$ coordinate is close to $90^\circ$, they are also aligned with the wires of the collection plane. Thus, these cosmic rays have few hits in two out of three planes and the algorithm is not able to reconstruct a track.
+As we can see, the configuration with the lowest reconstruction efficiency in this cases is always the upstream one. The drawing of the extrapolated tracks with those specific $\theta,\phi,L$ coordinates shows that, for the upstream configuration, the corresponding cosmic rays go through regions with missing wires in one of the induction planes (Fig. \ref{fig:wires}).
 
 \begin{figure}[htbp]
   \begin{center}
@@ -290,10 +318,36 @@ As we can see, the configuration with the lowest reconstruction efficiency in th
   \end{center}
 \end{figure}
 
-We then quote the systematic error related to the detector non-uniformities for each $\theta,\phi,L$ bin as the difference between the best reconstructing efficiency and the overall reconstruction efficiency (obtained merging the three dataset with different configurations), as also described in \cite{besiii}.
+
+Moreover, since their $\theta$ coordinate is close to $90^\circ$, they are also aligned with the wires of the collection plane. Thus, these cosmic rays have few hits in two of three planes and the algorithm is not able to reconstruct a track. Fig. \ref{fig:example} shows a not-reconstructed MuCS cosmic ray going through the region with missing wires and parallel to the collection plane wires.
+
+\begin{figure}[htbp]
+  \begin{center}
+    \begin{subfigure}{0.3\textwidth}
+      \includegraphics[width=\linewidth]{figures/u.png}
+      \caption{Induction (U) plane} \label{fig:u}
+    \end{subfigure}
+    \begin{subfigure}{0.3\textwidth}
+      \includegraphics[width=\linewidth]{figures/v.png}
+      \caption{Induction (V) plane} \label{fig:v}
+    \end{subfigure}
+    \begin{subfigure}{0.3\textwidth}
+      \includegraphics[width=\linewidth]{figures/y.png}
+      \caption{Collection (Y) plane} \label{fig:y}
+    \end{subfigure}    \caption{Event display of a not-reconstructed MuCS cosmic ray track in the U, V and Y planes. Green lines show the reconstructed tracks.} \label{fig:example}
+  \end{center}
+\end{figure}
+
+
+
+We quote the systematic error related to the detector non-uniformities for each $\theta,\phi,L$ bin as the difference between the best reconstructing efficiency of the three configurations and the overall reconstruction efficiency (obtained merging the three dataset), as also described in \cite{besiii}.
 
 \subsection{Energy sampling}
-The multiple Coulomb scattering depends on the energy of the cosmic ray, with low-energy cosmic rays scattering more, on average, than high-energy ones. In the bins with a low number of MuCS-triggered events it can then happen to have cosmic ray in a small region of the energy spectrum, biasing the measurement of the reconstruction efficiency.
+The multiple Coulomb scattering depends on the energy of the cosmic ray: the angular dispersion $\theta_{0}$ of a cosmic muon can be in fact calculated by the relation:
+\begin{equation}
+\theta_{0} = \frac{13.6}{\beta c p}\sqrt{x/X_{0}}\left[1+0.038\mathrm{ln}(x/X_0)\right],
+\end{equation}
+where $p$ is the momentum of the muon, $x$ is the distance traveled, and $X_0$ is the radiation length of the material.  Thus, low-energy cosmic rays scatter more than high-energy ones. In the bins where the data reconstruction efficiency has been measured with low statistics, it can happen to have cosmic rays distributed in a small region of the energy spectrum, biasing the measurement of the reconstruction efficiency.
 
 \begin{figure}[htbp]
   \begin{center}
@@ -302,7 +356,7 @@ The multiple Coulomb scattering depends on the energy of the cosmic ray, with lo
   \end{center}
 \end{figure}
 
-In order to verify if this sampling introduces a systematic effect, we choose the bin with the lowest number of MuCS-triggered data events, in our case 19. We then performed a Monte Carlo simulation, generating one thousand pseudo-experiments with 19 MuCS-triggered events with the same starting angles and length of our chosen bin. We filled an histogram with the value of the reconstruction efficiency for each pseudo-experiment and fitted the distribution with a Gaussian (Fig. \ref{fig:sampling}). The $\sigma$ of the fit is $0.084$, compatible with the statistical error of the same bin which is $0.083$. Thus, we conclude that the energy sampling of the cosmic rays does not introduce a systematic effect.
+In order to verify if this sampling introduces a systematic effect, we choose the bin with the lowest number of MuCS events, which is 19. We then performed a Monte Carlo simulation, generating one thousand pseudo-experiments with 19 MuCS events with the same starting angles and length of our chosen bin. We filled an histogram with the value of the reconstruction efficiency for each pseudo-experiment and fitted the distribution with a Gaussian (Fig. \ref{fig:sampling}). The $\sigma$ of the fit is $0.084$, compatible with the statistical error of the same bin which is $0.083$. Thus, we conclude that the energy sampling of the cosmic rays does not introduce a systematic effect.
 
 \subsection{Data/Monte Carlo comparison}
 It is now possible to compare the data and Monte Carlo reconstruction efficiencies. The three-dimensional efficiency plots shown in Fig. \ref{fig:3d} can be projected on the bi-dimensional planes ($\theta,\phi$), ($\theta,L$), ($\phi,L$), shown in Fig. \ref{fig:2d} and on the single axis $\theta$, $\phi$, $L$, shown in Fig. \ref{fig:1d}.
@@ -318,7 +372,7 @@ It is now possible to compare the data and Monte Carlo reconstruction efficienci
     \includegraphics[width=\linewidth]{figures/l.pdf}
     \caption{$L$} \label{fig:l}
   \end{subfigure}
-  \caption{Monte Carlo (red line) and data (black points) reconstruction efficiency as a function of the starting angles $\theta$, $\phi$ and the extrapolated track length $L$. Data statistical error are correspond to the grey boxes.}\label{fig:1d}
+  \caption{Monte Carlo (red line) and data (black points) reconstruction efficiency as a function of the starting angles $\theta$, $\phi$ and the extrapolated track length $L$.}\label{fig:1d}
 \end{figure}
 
 Taking into account the systematic error given by the detector non-uniformities, as described in Sec. \ref{sec:wires}, the obtained data/Monte Carlo agreement is satisfactory, with almost every bin in agreement within 2$\sigma$.
@@ -391,9 +445,9 @@ The dataset with the merged MuCS, Monte Carlo and data information are stored in
 
   \bibitem{pandora} J.~S.~Marshall and M.~A.~Thomson, \textit{The Pandora Software Development Kit for Pattern Recognition}, Eur.\ Phys.\ J.\ C 75, no. 9, 439 (2015) \texttt{doi:10.1140/epjc/s10052\-015-3659-3} \texttt{[arXiv:1506.05348 [physics.data-an]]}.
 
-  \bibitem{cosmic} R. Acciarri, et al. [MicroBooNE Collaboration], \textit{Cosmic Shielding Studies at MicroBooNE}. \texttt{MICROBOONE-NOTE-1005-PUB}, 2016. \url{http:// www-microboone.fnal.gov/publications/publicnotes/index.html}.
-
   \bibitem{crt} M. Auger, et al., \textit{A Novel Cosmic Ray Tagger System for Liquid Argon TPC Neutrino Detectors}, Instruments 2016, 1, 1.
+
+  \bibitem{cosmic} R. Acciarri, et al. [MicroBooNE Collaboration], \textit{Cosmic Shielding Studies at MicroBooNE}. \texttt{MICROBOONE-NOTE-1005-PUB}, 2016. \url{http:// www-microboone.fnal.gov/publications/publicnotes/index.html}.
 
   \bibitem{mcdata} R. Acciarri, et al. [MicroBooNE Collaboration], \textit{A Comparison of Monte-Carlo Simulations and Data from MicroBooNE}, \texttt{MICROBOONE-NOTE-1014-PUB}.
 
